; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_bba.c_bba_init_one.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_bba.c_bba_init_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uip_netif = type { i64 }
%struct.bba_priv = type { i32, i32, i32 }

@UIP_ERR_IF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.uip_netif*)* @bba_init_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bba_init_one(%struct.uip_netif* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.uip_netif*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.bba_priv*, align 8
  store %struct.uip_netif* %0, %struct.uip_netif** %3, align 8
  %6 = load %struct.uip_netif*, %struct.uip_netif** %3, align 8
  %7 = getelementptr inbounds %struct.uip_netif, %struct.uip_netif* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to %struct.bba_priv*
  store %struct.bba_priv* %9, %struct.bba_priv** %5, align 8
  %10 = load %struct.bba_priv*, %struct.bba_priv** %5, align 8
  %11 = icmp ne %struct.bba_priv* %10, null
  br i1 %11, label %14, label %12

12:                                               ; preds = %1
  %13 = load i32, i32* @UIP_ERR_IF, align 4
  store i32 %13, i32* %2, align 4
  br label %24

14:                                               ; preds = %1
  %15 = load %struct.bba_priv*, %struct.bba_priv** %5, align 8
  %16 = getelementptr inbounds %struct.bba_priv, %struct.bba_priv* %15, i32 0, i32 0
  store i32 0, i32* %16, align 4
  %17 = load %struct.bba_priv*, %struct.bba_priv** %5, align 8
  %18 = getelementptr inbounds %struct.bba_priv, %struct.bba_priv* %17, i32 0, i32 1
  store i32 53511, i32* %18, align 4
  %19 = load %struct.bba_priv*, %struct.bba_priv** %5, align 8
  %20 = getelementptr inbounds %struct.bba_priv, %struct.bba_priv* %19, i32 0, i32 2
  store i32 78, i32* %20, align 4
  %21 = load %struct.uip_netif*, %struct.uip_netif** %3, align 8
  %22 = call i32 @__bba_init(%struct.uip_netif* %21)
  store i32 %22, i32* %4, align 4
  %23 = load i32, i32* %4, align 4
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %14, %12
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @__bba_init(%struct.uip_netif*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
